[package]
name = "alpha"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cranelift-codegen = "0.118.0"
cranelift-frontend = "0.118.0"
cranelift-object = "0.118.0"
cranelift-reader = "0.118.0"
cranelift-module = "0.118.0"
target-lexicon = "0.13"
lazy_static = "1.4.0"
pest = "2.7.8"
pest_derive = "2.7.8"
